crates/cli/tests/snapshots/golden__text_output__chain_bundle_text.snap
---
source: crates/cli/tests/golden.rs
expression: out
---
Certificate 1 (leaf)
[rfc5280]
  (7 passed, 9 not applicable)
[pqc]
  (0 passed, 9 not applicable)
[cabf_br]
  warn [cabf_br_certificate_policies_present] certificate has no CertificatePolicies extension; CA/Browser Forum BR §7.1.2.7.9 requires it in a subscriber TLS certificate
  (23 passed, 0 not applicable)
[cabf_ev]
  (0 passed, 9 not applicable)
[hygiene]
  (3 passed, 1 not applicable)

Certificate 2
[rfc5280]
  (8 passed, 8 not applicable)
[pqc]
  (0 passed, 9 not applicable)
[hygiene]
  (3 passed, 1 not applicable)
OK: no findings
summary: 1 warn

Chain checks:
(whole chain)
  error [chain_subject_issuer_dn_match] certificate 2 (CN=Chain Test Root CA) does not link into the presented chain (unlinkable / extra certificate)
