crates/cli/tests/snapshots/golden__text_output__good_text.snap
---
source: crates/cli/tests/golden.rs
expression: out
---
[rfc5280]
  (7 passed, 9 not applicable)
[cabf_br]
  (12 passed, 0 not applicable)
[cabf_ev]
  (0 passed, 9 not applicable)
[hygiene]
  (3 passed, 1 not applicable)
OK: no findings
summary: no findings
